Pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-service
  namespace: heartbeat
  labels:
    run : efm_heartbeating_nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    volumeMounts:
    - name: config-volume-nginx
      mountPath: /etc/nginx/nginx.conf
      subPath: nginx.conf
    ports:
    - containerPort: 80
  volumes:
  - name: config-volume-nginx
    configMap:
      name: nginx-heartbeat
---
apiVersion: v1
kind: Pod
metadata:
  name: spark
  namespace: heartbeat
spec:
  containers:
  - name: minifi-spark
    image: apache/nifi-minifi:latest
    volumeMounts:
    - name: config-volume-spark
      mountPath: opt/minifi/minifi-1.21.0/conf/bootstrap.conf
      subPath: bootstrap.conf
    ports:
    - containerPort: 8083
  volumes:
    - name: config-volume-spark
      configMap:
        name: minifi-agent-spark
  hostAliases:
  - ip: "192.168.49.2"
    hostnames:
    - "heartbeatingefm.com"
---
apiVersion: v1
kind: Pod
metadata:
  name: hive
  namespace: heartbeat
spec:
  containers:
  - name: minifi-hive
    image: apache/nifi-minifi:latest
    volumeMounts:
    - name: config-volume-hive
      mountPath: opt/minifi/minifi-1.21.0/conf/bootstrap.conf
      subPath: bootstrap.conf
    ports:
    - containerPort: 8083
  volumes:
    - name: config-volume-hive
      configMap:
        name: minifi-agent-hive
  hostAliases:
  - ip: "192.168.49.2"
    hostnames:
    - "heartbeatingefm.com"
---
apiVersion: v1
kind: Pod
metadata:
  name: yarn
  namespace: heartbeat
spec:
  containers:
  - name: minifi-yarn
    image: apache/nifi-minifi:latest
    volumeMounts:
    - name: config-volume-yarn
      mountPath: opt/minifi/minifi-1.21.0/conf/bootstrap.conf
      subPath: bootstrap.conf
    ports:
    - containerPort: 8083
  volumes:
    - name: config-volume-yarn
      configMap:
        name: minifi-agent-yarn
  hostAliases:
  - ip: "192.168.49.2"
    hostnames:
    - "heartbeatingefm.com"
