Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: heartbeat
spec:
  type: NodePort
  ports: 
  - protocol: TCP
    port: 80
    targetPort: 80
    name : https
  selector:
    run : efm_heartbeating_nginx
