Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: heartbeat
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
  - host: heartbeatingefm.com
    http:
      paths:
      - path: /files
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /heartbeat
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /acknowledge
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
